# pulse_chat

./: .gitignore  Cargo.toml  README.md  database.sql  package-lock.json  package.json  pulse_chat.sql
.trae/rules/: project_rules.md
config/: application.yaml  emailTemplate.txt
front/: index.html  package-lock.json  package.json  vite.config.js
front/src/: App.vue  main.js
front/src/layouts/: AuthLayout.vue  DefaultLayout.vue
front/src/router/: index.js
front/src/stores/: auth.js  chat.js  resetPassword.js  user.js
front/src/styles/: main.scss  variables.scss
front/src/views/: Chat.vue  ForgotPassword.vue  Groups.vue  Login.vue  Notifications.vue  Profile.vue  Register.vue  Settings.vue
src/: main.rs
src/config/: db_config.rs  error_config.rs  filter.rs  mod.rs
src/controller/: message_controller.rs  mod.rs  session.rs  user_controller.rs
src/model/: mod.rs
src/model/dto/: message.rs  mod.rs  user_dto.rs
src/model/entity/: contacts.rs  conversations.rs  group_members.rs  group_messages.rs  messages.rs  mod.rs  prelude.rs  pulse_group.rs  sea_orm_active_enums.rs  users.rs
src/model/vo/: forget_password_request.rs  login_request.rs  message.rs  mod.rs  register_request.rs  user_search.rs
src/service/: message_service.rs  mod.rs  user_service.rs
src/utils/: datetime_format.rs  email_util.rs  mod.rs  result.rs  token.rs
原型/: chat.html  files.html  groups.html  login.html  notifications.html  profile.html  register.html  search.html  settings.html
