[package]
name = "pulse_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = {version = "1.1.14",features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"]}
tokio = {version="1.47.1", features = ["full"]}
tokio-stream = {version = "0.1.17", features = ["sync"] }
redis = {version = "0.32.5", features = ["r2d2", "tokio-comp", "json"]}
rust-embed = {version = "8.7.2", features = ["include-exclude"]}
actix-web = "4.11.0"
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0.142"
jsonwebtoken = "9.3.1"
thiserror = "2.0.14"
derive-getters = "0.5.0"
once_cell = "1.21.3"
config = "0.15.14"
md5 = "0.8.0"
futures-util = "0.3.31"
chrono = { version = "0.4", features = ["serde"] }
lettre = {version = "0.11", features = ["smtp-transport","tokio1-native-tls"]}
handlebars = "6.3.2"
include_dir = {version = "0.7.4", features=["glob"]}